--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
         <h1 class="mt-2">Socket client</h1>
         <hr>
         <p>Hola como estas </p>
-        <button class="btn btn-danger">Danger 5<sup>2</sup> </button>
+        <button class="btn btn-danger">Exponente 5<sup>2</sup> </button>
         <h3>
             Server Status:
             <span class="text-success" id="lblOnline">Online</span>
